# store

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.sh
.bruno/Beamlit store/: Agent crew.bru  Agent cursor rule.bru  Agent dalle + search.bru  Agent github PR with two repo.bru  Agent github PR.bru  Agent github PRs.bru  Agent gmap.bru  Agent hello world.bru  Agent list tools.bru  Agent math.bru  Agent memory check.bru  Agent memory.bru  Agent prompt resume.bru  Agent search.bru  Agent.bru  Doc.bru  Function github.bru  Function math.bru  Function.bru  Tool.bru  bruno.json
.bruno/Beamlit store/Agents/: Agent crew.bru  Agent dalle + search.bru  Agent github PR.bru  Agent hello world.bru  Agent math.bru  Agent memory check.bru  Agent prompt resume.bru
.bruno/Beamlit store/Agents/create app/: All step.bru  First step.bru  Rewrite secrets.bru  Second step.bru
.bruno/Beamlit store/Agents/demo sales kpi reporter/: Amazon information.bru  List KPI.bru
.bruno/Beamlit store/Agents/information-generation/: Generate.bru
.bruno/Beamlit store/Functions/: Function cursorrules.bru  Function math.bru  Function search.bru
.bruno/Beamlit store/Functions/Github/: Branch: create_branch.bru  Branch: delete_branch.bru  Branch: list_branches.bru  Branch: search_code.bru  File: create_file.bru  File: list_files.bru  File: read_file.bru  File: update_file.bru  Issue: comment_on_issue.bru  Issue: get_issue.bru  Issue: get_issues.bru  PR: close_pull_request.bru  PR: create_pull_request.bru  PR: create_review_request.bru  PR: get_pull_request.bru  PR: list_open_pull_requests.bru  PR: list_pull_request_files.bru  PR: open_pull_request.bru  Star: get_star.bru  Star: set_star.bru
.bruno/Beamlit store/deepresearch/: Request.bru
.bruno/Beamlit store/demo sales kpi reporter/: List KPI.bru  Retrieve KPI.bru
.bruno/Beamlit store/functions/: kit.bru
.bruno/Beamlit store/health/: Agent connect demo user.bru  Agent demo user health sumup.bru  Agent demo user infos.bru  Agent health fasten summary.bru  Agent health general question.bru
.github/workflows/: agents.yaml  functions.yaml  ruff.yaml  tools.yaml
agent-tools/: Dockerfile
agent-tools/math/: beamlit.yaml  pyproject.toml
agent-tools/search/: beamlit.yaml  pyproject.toml
agents/: Dockerfile
agents/langchain-chat-completions/: beamlit.yaml  bl_auth.py  bl_config.py  bl_generate_functions.py  bl_generate_tools.py  main.py  parse_beamlit.py  prompt.py  pyproject.toml
agents/langchain-chat-completions/sample/: sample_chain.py
app/: main.py
app/tools/: beamlit.yaml
apps/app-agent/: main.py
apps/app-agent/agents/: beamlit.py  beamlit.yaml
apps/app-function/: main.py
apps/app-tool/: main.py
apps/app-tool/tools/: beamlit.yaml  pyproject.toml
functions/: Dockerfile
functions/math/: beamlit.yaml  main.py  parse_beamlit.py  pyproject.toml
functions/search/: beamlit.yaml  main.py  parse_beamlit.py  pyproject.toml
scripts/: pushStore.js  push_to_store.py
src/agents/: Dockerfile
src/agents/beamlit-agent/: README.md  beamlit.yaml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
src/agents/beamlit-agent/src/: agent.ts
src/agents/blaxel-agent/: README.md  blaxel.toml  package.json  pnpm-lock.yaml
src/agents/blaxel-agent/src/: agent.ts  index.ts
src/agents/langchain-chat-completions/: beamlit.yaml  main.py
src/agents/langchain-external-providers/: beamlit.yaml  main.py  prompt.py  pyproject.toml
src/apps/app-agent/: main.py
src/apps/app-function/: main.py
src/common/: beamlit.py  bl_auth.py  bl_config.py  bl_context.py  bl_generate.py  bl_generate_functions.py  bl_instrumentation.py  bl_logger.py  bl_register_request.py
src/common/middlewares/: __init__.py  access_log.py  process_time.py
src/functions/: Dockerfile
src/functions/github/: beamlit.yaml  main.py  models.py  pyproject.toml
src/functions/github/kit/: __init__.py  branch.py  file.py  issues.py  pull_request.py  star.py
src/functions/math/: beamlit.yaml  main.py  pyproject.toml
src/functions/search/: beamlit.yaml  main.py  pyproject.toml
