[project]
name = "store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "langchain-community==0.3.3",
    "langchain-openai==0.2.4",
    "langchain-mistralai==0.2.0",
    "langchain-core==0.3.13",
    "langgraph==0.2.40",
    "langchain-anthropic>=0.2.3",
]

[tool.uv.workspace]
members = ["agents/langchain-chat-completions"]
