[project]
name = "store"
version = "0.1.0"
description = "Beamlit langchain agents for providers"
authors = [
    { name = "cploujoux", email = "cploujoux@beamlit.com" },
]
requires-python = ">=3.12,<=3.13"
dependencies = [
    "beamlit>=0.0.48",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-cohere>=0.4.2",
    "langchain-xai>=0.2.0",
    "langchain-anthropic>=0.3.4",
    "langchain-mistralai>=0.2.5",
    "langchain-deepseek-official>=0.1.0",
]
