[project]
name = "store"
version = "0.1.0"
description = "Beamlit langchain agents for providers"
authors = [
    { name = "cploujoux", email = "cploujoux@beamlit.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "langchain-community==0.3.3",
    "langchain-openai==0.2.4",
    "langchain-anthropic==0.2.3",
    "langchain-mistralai==0.2.0",
    "langchain-core==0.3.13",
    "langgraph==0.2.40",
]