[project]
name = "store"
version = "0.1.0"
description = "A function for performing mathematical calculations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community==0.3.3",
    "pygithub==2.5.0",
    "tiktoken==0.7.0",
    "pydash==8.0.4",
    "beamlit>=0.0.41",
]
