[project]
name = "store"
version = "0.1.0"
description = "A function for performing mathematical calculations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.4",
    "asgi-correlation-id==4.3.4",
    "requests==2.32.3",
    "traceloop-sdk>=0.33.12",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-exporter-otlp>=1.28.2",
    "opentelemetry-api>=1.28.2",
    "opentelemetry-instrumentation-fastapi>=0.49b2",
    "opentelemetry-instrumentation-httpx>=0.49b2",
]
