[project]
name = "store"
version = "0.1.0"
description = "A search engine optimized for comprehensive, accurate, and trusted results. Useful for when you need to answer questions about current events. Input should be a search query."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beamlit>=0.0.45",
]
